--- a/20240419/index.html
+++ b/20240419/index.html
@@ -5,15 +5,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>TEST</title>
+  <title>ドキュメント</title>
 </head>
 <body>
 
-  <h1>Hello</h1>
+  <h1>テスト</h1>
   <p>久しぶりのコーディング何も覚えてなさすぎワロタ</p>
 
   <dt>あいうえお</dt>
-  <dd>ああ</dd>
+  <dd>kakikukeko</dd>
   <dd>あああああああ</dd>
 </body>
 </html>
